--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
-  "name": "test-project-for-merion",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "build": "echo \"OK! && exit 1",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "axios": "^1.6.8"
-  }
+	"name": "test-project-for-merion",
+	"version": "1.0.0",
+	"description": "",
+	"main": "index.js",
+	"scripts": {
+		"build": "echo \"OK!",
+		"test": "echo \"Error: no test specified\""
+	},
+	"author": "",
+	"license": "ISC",
+	"dependencies": {
+		"axios": "^1.6.8"
+	}
 }
