--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"description": "",
 	"main": "index.js",
 	"scripts": {
-		"build": "echo \"OK!",
+		"build": "echo \"OK!\"",
 		"test": "echo \"Error: no test specified\""
 	},
 	"author": "",
